[gd_scene load_steps=23 format=3 uid="uid://b8y1hxxtygcd6"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_ug47y"]
[ext_resource type="Texture2D" uid="uid://p112te2ifw2i" path="res://assets/background/Layer_0010_1.png" id="2_iye0v"]
[ext_resource type="Texture2D" uid="uid://bxyskypmeuu54" path="res://assets/background/Layer_0011_0.png" id="3_mgjrn"]
[ext_resource type="Texture2D" uid="uid://b3ui3vbcghcee" path="res://assets/background/Layer_0009_2.png" id="4_b2e4v"]
[ext_resource type="Texture2D" uid="uid://dj68ehtsak43p" path="res://assets/background/Layer_0004_Lights.png" id="5_66le2"]
[ext_resource type="Texture2D" uid="uid://dxg70l1yst6mv" path="res://assets/background/Layer_0007_Lights.png" id="6_y1yfe"]
[ext_resource type="Texture2D" uid="uid://d34fulfofsu0d" path="res://assets/background/Layer_0001_8.png" id="7_ccc0b"]
[ext_resource type="Texture2D" uid="uid://douucp3n0f0cc" path="res://assets/background/Layer_0000_9.png" id="8_uaq5a"]
[ext_resource type="TileSet" uid="uid://xwb8uoh4gbsi" path="res://tilesets/ground_tile_set.tres" id="9_ntmf7"]
[ext_resource type="Texture2D" uid="uid://dba36115av74c" path="res://assets/background/Layer_0003_6.png" id="10_ctpod"]
[ext_resource type="Texture2D" uid="uid://ceibrouxruyvu" path="res://assets/background/Layer_0002_7.png" id="11_6bwmo"]
[ext_resource type="PackedScene" uid="uid://df1a6vfcdch5t" path="res://scenes/characters/virtual_guy.tscn" id="12_se8y4"]
[ext_resource type="Script" path="res://scripts/characters/virtual_guy.gd" id="13_xtl5w"]
[ext_resource type="PackedScene" uid="uid://vonf6ps58aik" path="res://scenes/collectables/collectable_kiwi.tscn" id="14_75bd8"]
[ext_resource type="PackedScene" uid="uid://r3jom7elntf2" path="res://scenes/traps/fire.tscn" id="15_7akho"]
[ext_resource type="PackedScene" uid="uid://bam10gyc1iv1t" path="res://scenes/finish_line/end_trophy.tscn" id="15_8ubwc"]
[ext_resource type="PackedScene" uid="uid://cbe4w0di5anq4" path="res://scenes/finish_line/finish_level.tscn" id="17_121n3"]
[ext_resource type="Script" path="res://scripts/label_points.gd" id="17_upibd"]
[ext_resource type="PackedScene" uid="uid://bwlcubo5mxghv" path="res://scenes/traps/saw.tscn" id="19_h6wbd"]
[ext_resource type="Script" path="res://scripts/label_lives.gd" id="20_naavv"]

[sub_resource type="GDScript" id="GDScript_c8iqv"]
script/source = "extends Node


@export var game_manager = GameManager.new()
"

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_t1dwi"]

[node name="Root" type="Node"]
script = SubResource("GDScript_c8iqv")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_ug47y")

[node name="SceneObjects" type="Node" parent="."]

[node name="map_one" type="ParallaxBackground" parent="SceneObjects"]

[node name="background" type="ParallaxLayer" parent="SceneObjects/map_one"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(1856, 0)
metadata/_edit_lock_ = true

[node name="blue" type="TextureRect" parent="SceneObjects/map_one/background"]
texture_filter = 1
offset_left = -150.0
offset_top = -710.0
offset_right = 778.0
offset_bottom = 83.0
scale = Vector2(2.13362, 1.83796)
texture = ExtResource("2_iye0v")
metadata/_edit_lock_ = true

[node name="gradient" type="TextureRect" parent="SceneObjects/map_one/background"]
texture_filter = 1
offset_left = -150.0
offset_top = -710.0
offset_right = 778.0
offset_bottom = 83.0
scale = Vector2(2.13362, 1.83796)
texture = ExtResource("3_mgjrn")
metadata/_edit_lock_ = true

[node name="stems_shadows" type="TextureRect" parent="SceneObjects/map_one/background"]
offset_left = -150.0
offset_top = -245.0
offset_right = 1850.0
offset_bottom = 755.0
texture = ExtResource("4_b2e4v")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="lights" type="ParallaxLayer" parent="SceneObjects/map_one"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(1856, 0)
metadata/_edit_lock_ = true

[node name="layer5" type="TextureRect" parent="SceneObjects/map_one/lights"]
texture_filter = 1
offset_left = -150.0
offset_top = -710.0
offset_right = 778.0
offset_bottom = 83.0
scale = Vector2(2.13362, 1.83796)
texture = ExtResource("5_66le2")
metadata/_edit_lock_ = true

[node name="layer7" type="TextureRect" parent="SceneObjects/map_one/lights"]
texture_filter = 1
offset_left = -150.0
offset_top = -710.0
offset_right = 778.0
offset_bottom = 83.0
scale = Vector2(2.13362, 1.83796)
texture = ExtResource("6_y1yfe")
metadata/_edit_lock_ = true

[node name="grass" type="ParallaxLayer" parent="SceneObjects/map_one"]
motion_scale = Vector2(1.2, 1.2)
motion_mirroring = Vector2(1856, 0)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="SceneObjects/map_one/grass"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -200.0
offset_right = 1850.0
offset_bottom = 593.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_ccc0b")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="ground" type="ParallaxLayer" parent="SceneObjects/map_one"]
motion_scale = Vector2(1.3, 1.3)
motion_mirroring = Vector2(1856, 0)
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="SceneObjects/map_one/ground"]
position = Vector2(8, 610)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneObjects/map_one/ground/StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_t1dwi")

[node name="ground_rect" type="TextureRect" parent="SceneObjects/map_one/ground/StaticBody2D/CollisionShape2D"]
texture_filter = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -780.0
offset_right = 1690.0
offset_bottom = 30.0
grow_vertical = 0
texture = ExtResource("8_uaq5a")
stretch_mode = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="init_wall" type="ParallaxLayer" parent="SceneObjects/map_one"]
motion_scale = Vector2(2.08165e-12, 2.08165e-12)
metadata/_edit_lock_ = true

[node name="init_wall" type="TileMap" parent="SceneObjects/map_one/init_wall"]
z_index = -1
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(3, 3)
tile_set = ExtResource("9_ntmf7")
format = 2
layer_0/tile_data = PackedInt32Array(851967, 0, 47, 786431, 0, 47, 720895, 0, 47, 655359, 0, 47, 589823, 0, 47, 524287, 0, 47, 458751, 0, 47, 393215, 0, 47, 327679, 0, 47, 262143, 0, 47, 196607, 0, 47, 131071, 0, 47, 65535, 0, 47)
metadata/_edit_lock_ = true

[node name="stem" type="ParallaxLayer" parent="SceneObjects/map_one"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(1856, 0)
metadata/_edit_lock_ = true

[node name="layer4" type="TextureRect" parent="SceneObjects/map_one/stem"]
texture_filter = 1
offset_left = -200.0
offset_top = -730.0
offset_right = 728.0
offset_bottom = 63.0
scale = Vector2(2.13362, 1.83796)
texture = ExtResource("10_ctpod")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="tree_top" type="ParallaxLayer" parent="SceneObjects/map_one"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(1856, 0)
metadata/_edit_lock_ = true

[node name="layer2" type="TextureRect" parent="SceneObjects/map_one/tree_top"]
texture_filter = 1
offset_left = -150.0
offset_top = -710.0
offset_right = 778.0
offset_bottom = 83.0
scale = Vector2(2.13362, 1.83796)
texture = ExtResource("11_6bwmo")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="VirtualGuy" parent="SceneObjects" instance=ExtResource("12_se8y4")]
position = Vector2(145, 576)
slide_on_ceiling = false
script = ExtResource("13_xtl5w")

[node name="Traps" type="Node" parent="SceneObjects"]

[node name="Fire" parent="SceneObjects/Traps" node_paths=PackedStringArray("character") instance=ExtResource("15_7akho")]
position = Vector2(891, 591)
scale = Vector2(2, 2)
character = NodePath("../../VirtualGuy")
metadata/_edit_lock_ = true

[node name="Fire2" parent="SceneObjects/Traps" node_paths=PackedStringArray("character") instance=ExtResource("15_7akho")]
position = Vector2(1098, 592)
scale = Vector2(2, 2)
character = NodePath("../../VirtualGuy")
metadata/_edit_lock_ = true

[node name="Saw" parent="SceneObjects/Traps" node_paths=PackedStringArray("character") instance=ExtResource("19_h6wbd")]
position = Vector2(1994, 586)
scale = Vector2(2, 2)
character = NodePath("../../VirtualGuy")

[node name="Collectables" type="Node" parent="SceneObjects"]

[node name="CollectableKiwi" parent="SceneObjects/Collectables" instance=ExtResource("14_75bd8")]
position = Vector2(353, 441)
metadata/_edit_lock_ = true

[node name="CollectableKiwi6" parent="SceneObjects/Collectables" instance=ExtResource("14_75bd8")]
position = Vector2(765, 447)
metadata/_edit_lock_ = true

[node name="CollectableKiwi2" parent="SceneObjects/Collectables" instance=ExtResource("14_75bd8")]
position = Vector2(447, 413)
metadata/_edit_lock_ = true

[node name="CollectableKiwi5" parent="SceneObjects/Collectables" instance=ExtResource("14_75bd8")]
position = Vector2(689, 413)
metadata/_edit_lock_ = true

[node name="CollectableKiwi3" parent="SceneObjects/Collectables" instance=ExtResource("14_75bd8")]
position = Vector2(526, 377)
metadata/_edit_lock_ = true

[node name="CollectableKiwi4" parent="SceneObjects/Collectables" instance=ExtResource("14_75bd8")]
position = Vector2(611, 376)
metadata/_edit_lock_ = true

[node name="FinishLevel" parent="SceneObjects" instance=ExtResource("17_121n3")]
offset_left = 3221.0
offset_top = 259.0
offset_right = 3221.0
offset_bottom = 259.0

[node name="EndTrophy" parent="SceneObjects" instance=ExtResource("15_8ubwc")]
position = Vector2(3378, 548)
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 35.0
offset_top = 41.0
offset_right = 333.0
offset_bottom = 126.0
metadata/_edit_lock_ = true

[node name="LabelPoints" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "0 Points"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("17_upibd")
metadata/_edit_lock_ = true

[node name="LabelLives" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 36.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "5 lives"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("20_naavv")
metadata/_edit_lock_ = true
